--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -91,7 +91,7 @@
     <!-- Services Section -->
     <section class="services-section">
         <div class="container">
-            <h2>Services We Provide</h2>
+            <center><h2>Services We Provide</h2></center>
             <div class="row">
                 <div class="col-md-4">
                     <div class="service-box">
